# PySimlink

./: .gitignore  .pylintrc  CHANGELOG.md  MANIFEST.in  README.md  Readme.md  index.html  objects.inv  pyproject.toml  requirements.txt  setup.py
.github/scripts/: fetch_models.py  model_test.py  run_tests.py
.github/workflows/: 1_build.yml  2_sphinx.yml  3_deploy.yml  build_test.yml  main.yml  model_build.yml  sphinx.yml  test.yml  wheel.yml  wheels.yml
_modules/: index.html
_modules/pysimlink/lib/: model.html
_modules/pysimlink/utils/: model_utils.html
_sources/: index.rst.txt
_sources/src/: license.rst.txt
branch/master/: .buildinfo  genindex.html  search.html  searchindex.js
branch/master/src/: autodoc.html  quickstart.html
docs/: conf.py  index.rst
docs/src/: autodoc.rst  errors.rst  howto.rst  license.rst  quickstart.rst
pysimlink/: __init__.py  compile.py  model.py
pysimlink/c_files/include/: containers.hpp  dev_tools.hpp  matrix_handler.hpp  model_interface.hpp  model_interface.tpp  model_utils.hpp  model_utils.tpp  param_structs.hpp  safe_utils.hpp
pysimlink/c_files/src/: bindings.cpp  dev_tools.cpp  hash.cpp  matrix_handler.cpp  model_interface.cpp  model_interface_classic.cpp  model_interface_common.cpp  model_interface_grt.cpp  (+2 more)
pysimlink/lib/: cmake_gen.py  dependency_graph.py  exceptions.py  model.py  model_paths.py  model_types.py  spinner.py  struct_parser.py
pysimlink/utils/: annotation_utils.py  file_utils.py  model_utils.py
refs/: banner.pptx
src/: howto.html  license.html
tests/: debug.py  main.py  model_paths.py
(+4 files in other folders)
