[build-system]
requires = ["setuptools>=59.0.0", "wheel"]
build-backend = "setuptools.build_meta"

[tool.black]
line-length = 100
target-version = ['py36', 'py37', 'py38', 'py39', 'py310']
include = '\.pyi?$'
exclude = '''
/(
  \.toml
  |\.sh
  |\.git
  |\.ini
  |\.c
  |\.cpp
  |\.hpp
  |\.h
  |\.txt
)/
'''
